build/hadra-build-tool/src/test/resources/net/hl/test/compiler/success/testCompilerSuccess_snippet.hl
fun void methodExample(){
    int a,b;
}