build/hadra-build-tool/src/test/resources/net/hl/test/compiler/fail/testCompilerFail0040.hl
fun void main(){
    int x=3;
     {
         float x=3;
     }
}
